[package]
name = "gload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.9"
clap = { version = "3.2.6", features = ["cargo"] }
crossbeam = "0.8.1"
hashbrown = "0.12.1"
http = "0.2.8"
serde = { version = "1.0.138", features = ["derive", "std"] }
serde_json = { version = "1.0.83", features = ["std"] }
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
